--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,29 +24,15 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <h3 align="center">登录</h3>
-            <!--<form class="form-signin" th:action="@{/login}" th:object="${user}" method="post">-->
-            <!--<h2 class="form-signin-heading">请 登 录</h2>-->
-            <!--<input type="text" class="form-control" placeholder="账号" th:field="*{username}"/>-->
-            <!--<input type="password" class="form-control" placeholder="密码" th:field="*{password}"/>-->
-            <!--<p th:if="${param.logout}" class="error-code">已成功注销</p>-->
-            <!--<p th:if="${param.error}" class="error-code">用户名或者密码错误</p>-->
-            <!--<button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>-->
-            <!--</form>-->
-
-            <form class="form-signin" th:action="@{/login}" method="post">
-                <input type="text" class="form-control" placeholder="账号" th:name="userName"/>
-                <input type="password" class="form-control" placeholder="密码" th:name="password"/>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
+            <form class="form-signin" th:action="@{/login}" th:object="${user}" method="post">
+            <h2 class="form-signin-heading">请 登 录</h2>
+            <input type="text" class="form-control" placeholder="账号" th:field="*{username}"/>
+            <input type="password" class="form-control" placeholder="密码" th:field="*{password}"/>
+            <p th:if="${param.logout}" class="error-code">已成功注销</p>
+            <p th:if="${param.error}" class="error-code">用户名或者密码错误</p>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
             </form>
 
-            <!--<form class="form-signin" role="form" th:action="@{/user/login}" th:method="post">-->
-                <!--<input type="text" class="form-control" placeholder="用户名" required="required" name="userName" />-->
-                <!--<input type="password" class="form-control" placeholder="密码" required="required" name="password" />-->
-                <!--<button class="btn btn-lg btn-warning btn-block" type="submit">登录</button>-->
-                <!--<label class="checkbox">-->
-                    <!--<input type="checkbox" value="remember-me" /> 记住我-->
-                <!--</label>-->
-            <!--</form>-->
         </div>
     </div>
 </div>
