--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,11 +7,14 @@
 
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous"/>
 
     <!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"/>
+    <link rel="stylesheet"
+          href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+          crossorigin="anonymous"/>
 
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"
@@ -25,12 +28,13 @@
         <div class="col-md-6 col-md-offset-3">
             <h3 align="center">登录</h3>
             <form class="form-signin" th:action="@{/login}" th:object="${user}" method="post">
-            <h2 class="form-signin-heading">请 登 录</h2>
-            <input type="text" class="form-control" placeholder="账号" th:field="*{username}"/>
-            <input type="password" class="form-control" placeholder="密码" th:field="*{password}"/>
-            <p th:if="${param.logout}" class="error-code">已成功注销</p>
-            <p th:if="${param.error}" class="error-code">用户名或者密码错误</p>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
+                <h2 class="form-signin-heading">请 登 录</h2>
+                <input type="text" class="form-control" placeholder="账号" th:field="*{username}"/>
+                <input type="password" class="form-control" placeholder="密码"
+                       th:field="*{password}"/>
+                <p th:if="${param.logout}" class="error-code">已成功注销</p>
+                <p th:if="${param.error}" class="error-code">用户名或者密码错误</p>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
             </form>
 
         </div>
